welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:8: error: ')' expected but ';' found.
  baisseBrosse(); leveBrosse()
                ^